# SwimOceanBot

./: .amveraignore  .gitignore  README.md  amvera.yaml  amvera.yml  bot.py  constants.py  db.py  debug.py  pyproject.toml  requirements.txt  settings.py
.github/workflows/: auto-commit.yml  scheduled-ping.yml
