[project]
name = "swimoceanbot"
version = "0.1.0"
description = ""
authors = [{ name = "stalker7521" }]
requires-python = ">=3.12"
readme = "README.md"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytelegrambotapi = "^4.27.0"
gspread = "^6.2.1"
python-dotenv = "^1.1.0"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
oauth2client = "^4.1.3"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"